--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
+    "@stitches/react": "^1.2.8",
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
