--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@stitches/react": "^1.2.8",
     "next": "^12.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remixicon-react": "^1.0.0"
   },
   "devDependencies": {}
 }
