--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-collapsible": "^1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
