--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-collapsible": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@stitches/react": "^1.2.8",
+    "beautiful-react-hooks": "^3.10.0",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
