--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "fm": "prettier --write ."
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.3",
+    "@next/mdx": "^12.2.5",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-collapsible": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
