--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,6 +9,7 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.3",
+    "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.2.5",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-collapsible": "^1.0.0",
