--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.2.5",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-accordion": "^1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@stitches/react": "^1.2.8",
