--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "rehype-prism": "^2.1.3",
+    "remark-prism": "^1.3.6",
     "remixicon-react": "^1.0.0"
   },
   "devDependencies": {}
