--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-tooltip": "^1.0.0",
     "@radix-ui/react-visually-hidden": "^1.0.0",
     "@stitches/react": "^1.2.8",
+    "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^3.11.1",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
