--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@radix-ui/react-visually-hidden": "^1.0.0",
+    "@splinetool/react-spline": "^2.2.1",
     "@stitches/react": "^1.2.8",
     "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^3.11.1",
