add cmdk package

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stitches/react": "^1.2.8",
     "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^3.11.1",
+    "cmdk": "^0.1.19",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
