--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-popover": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
@@ -22,10 +23,12 @@
     "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^3.11.1",
     "cmdk": "^0.1.19",
+    "kbar": "^0.1.0-beta.36",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-cmdk": "^1.3.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "rehype-prism": "^2.1.3",
