--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.3.0",
     "rehype-prism": "^2.1.3",
     "remark-prism": "^1.3.6",
