--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-accordion": "^1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.0",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
@@ -22,6 +23,7 @@
     "@stitches/react": "^1.2.8",
     "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^3.11.1",
+    "cmdk": "^0.1.21",
     "kbar": "^0.1.0-beta.36",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
@@ -32,7 +34,8 @@
     "react-router-dom": "^6.3.0",
     "rehype-prism": "^2.1.3",
     "remark-prism": "^1.3.6",
-    "remixicon-react": "^1.0.0"
+    "remixicon-react": "^1.0.0",
+    "sass": "^1.57.1"
   },
   "devDependencies": {}
 }
