--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "beautiful-react-hooks": "^3.11.1",
     "cmdk": "^0.1.21",
     "kbar": "^0.1.0-beta.36",
+    "lucide-react": "^0.105.0",
     "next": "^12.2.3",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
