--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.1.3",
     "@mdx-js/react": "^2.1.3",
+    "@next/font": "^13.1.6",
     "@next/mdx": "^12.2.5",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^1.0.0",
@@ -24,9 +25,9 @@
     "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^3.11.1",
     "cmdk": "^0.1.21",
-    "kbar": "^0.1.0-beta.36",
+    "eslint-config-next": "^13.1.6",
     "lucide-react": "^0.105.0",
-    "next": "^12.2.3",
+    "next": "^13.1.6",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -35,8 +36,7 @@
     "react-router-dom": "^6.3.0",
     "rehype-prism": "^2.1.3",
     "remark-prism": "^1.3.6",
-    "remixicon-react": "^1.0.0",
-    "sass": "^1.57.1"
+    "remixicon-react": "^1.0.0"
   },
   "devDependencies": {}
 }
