--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "rehype-prism": "^2.1.3",
     "remark-prism": "^1.3.6",
