--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-hover-card": "^1.0.3",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "^1.0.0",
+    "@radix-ui/react-progress": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@radix-ui/react-visually-hidden": "^1.0.0",
