--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "beautiful-react-hooks": "^3.11.1",
     "cmdk": "^0.1.21",
     "eslint-config-next": "^13.1.6",
+    "framer-motion": "^10.0.1",
     "lucide-react": "^0.105.0",
     "next": "^13.1.6",
     "prettier": "^2.7.1",
