--- a/package.json
+++ b/package.json
@@ -42,5 +42,7 @@
     "remark-prism": "^1.3.6",
     "remixicon-react": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "5.0.2"
+  }
 }
