--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@radix-ui/react-visually-hidden": "^1.0.2",
+    "@splinetool/viewer": "^0.9.284",
     "@stitches/react": "^1.2.8",
     "babel-plugin-prismjs": "^2.1.0",
     "beautiful-react-hooks": "^4.3.0",
