--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.127.0",
     "next": "^13.2.4",
     "prettier": "^2.8.7",
+    "prism-react-renderer": "^2.0.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
